enhancement: allow to copy selected links to clipboard in configuration list- fix

--- a/templates/default/config/configlist.html
+++ b/templates/default/config/configlist.html
@@ -268,7 +268,7 @@
 						{button icon="delete" label="Delete selected" id="delete-configs"}
 					</div>
 					<div>
-						{button icon="url" label="Copy selected links" id="copy-links-configs" data_clipboard_text=""}
+						{button icon="url" label="Copy selected as links" id="copy-links-configs" data_clipboard_text=""}
 					</div>
 					<div>
 						<label>{trans("Check All")}
