improvement: resources ids marked with '#' prefix

--- a/templates/default/rt/rtticketmessagesbox.html
+++ b/templates/default/rt/rtticketmessagesbox.html
@@ -179,7 +179,7 @@
 													{icon name="sms"}
 												{/if}
 												<A href="?m=customerinfo&id={$message.customerid}">
-													{$message.customername}
+													{$message.customername} (#{$message.customerid})
 												</A>
 											{elseif $message.userid}
 												{icon name="user"}
