--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -530,86 +530,123 @@
 				<TR>
 					<TD style="width: 1%;">
 					    <TABLE width="100%">
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/division.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Division")}:
-						    </TD>
-						    <TD style="width: 98%;" colspan="2" class="nobr">
-							<SELECT size="1" name="division" {tip text="Select division"}>
-								<OPTION value="0">- {trans("all")} -</OPTION>
-								{foreach $divisions as $item}
-									<OPTION value="{$item.id}">{$item.label|escape}</OPTION>
-								{/foreach}
-							</SELECT>
-						    </TD>
-						</TR>
-						<tr>
-							<td><img src="img/customer.gif" alt=""></td>
-							<td class="bold">{trans("Customers")}:</td>
-							<td>
-								<select name="customer_type">
-									<option value="-1">{trans("- all customers -")}</option>
-									<option value="{$smarty.const.CTYPES_PRIVATE}">{trans("private person")}</option>
-									<option value="{$smarty.const.CTYPES_COMPANY}">{trans("legal entity")}</option>
-								</select>
-							</td>
-						</tr>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/group.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Group:")}
-						    </TD>
-							<TD style="width: 97%;" class="multiselect nobr">
-								<SELECT size="4" name="group[]" class="lms-ui-multiselect" multiple {tip text="Select group"} data-default-value="{trans("- all groups -")}">
-									{foreach $customergroups as $customergroup}
-									<OPTION value="{$customergroup.id}">{$customergroup.name|truncate:30:"&hellip;":true}</OPTION>
-									{/foreach}
-								</SELECT>
-							</TD>
-						    <TD style="width: 1%;" class="nobr">
-    							<INPUT type="checkbox" name="groupexclude" id="invoicereport-groupexclude" {if $listdata.groupexclude} CHECKED{/if}><label for="invoicereport-groupexclude">{trans("exclude group")}</label>
-						    </TD>
-						</TR>
-						<TR>
-						    <TD style="width: 1%;">
-							<IMG src="img/queue.gif" alt="">
-						    </TD>
-						    <TD style="width: 1%;" class="bold nobr">
-							{trans("Plan:")}
-						    </TD>
-							<TD style="width: 98%;" colspan="2" class="multiselect nobr">
-								<SELECT name="numberplanid[]" class="lms-ui-multiselect" style="min-width: 200px;" {tip text="Select numbering plan"} multiple data-default-value="{trans("- all -")}">
-									{foreach $numberplans as $plan}
-									{$period = $plan.period}
-									<OPTION value="{$plan.id}">{number number=$plan.next template=$plan.template time=$invoice.cdate} ({$_NUM_PERIODS.$period})</OPTION>
-									{/foreach}
-								</SELECT>
-							</TD>
-						</TR>
-						<TR>
-							<TD style="width: 1%;">
-								<IMG src="img/settings.gif" alt="">
-							</TD>
-							<TD style="width: 1%;" class="bold nobr">
-								{trans("Adjust the print")}:
-							</TD>
-							<TD style="width: 98%;" colspan="2" class="nobr">
-								<label>
-									<input type="checkbox" name="printcustomerid" value="1">
-									{trans("hide customer ID")}
-								</label>
-								<label>
-									<input type="checkbox" name="printonlysummary" value="1">
-									{trans("only summary")}
-								</label>
-							</TD>
-						</TR>
-					    </TABLE>
+							<colgrou>
+								<col style="width: 1%;">
+								<col style="width: 1%;">
+								<col style="width: 98%;">
+							</colgrou>
+							<TR>
+								<TD>
+									<IMG src="img/division.gif" alt="">
+								</TD>
+								<TD class="bold nobr">
+									{trans("Division")}:
+								</TD>
+								<TD colspan="2" class="nobr">
+									<SELECT size="1" name="division" {tip text="Select division"}>
+										<OPTION value="0">- {trans("all")} -</OPTION>
+										{foreach $divisions as $item}
+											<OPTION value="{$item.id}">{$item.label|escape}</OPTION>
+										{/foreach}
+									</SELECT>
+								</TD>
+							</TR>
+							<tr>
+								<td><img src="img/customer.gif" alt=""></td>
+								<td class="bold">{trans("Customers")}:</td>
+								<td>
+									<select name="customer_type">
+										<option value="-1">{trans("- all customers -")}</option>
+										<option value="{$smarty.const.CTYPES_PRIVATE}">{trans("private person")}</option>
+										<option value="{$smarty.const.CTYPES_COMPANY}">{trans("legal entity")}</option>
+									</select>
+								</td>
+							</tr>
+							<TR>
+								<TD>
+									<IMG src="img/group.gif" alt="">
+								</TD>
+								<TD class="bold nobr">
+									{trans("Group:")}
+								</TD>
+								<TD class="multiselect nobr">
+									<SELECT size="4" name="group[]" class="lms-ui-multiselect"
+											multiple {tip text="Select group"}
+											data-default-value="{trans("- all groups -")}">
+										{foreach $customergroups as $customergroup}
+											<OPTION value="{$customergroup.id}">{$customergroup.name|truncate:30:"&hellip;":true}</OPTION>
+										{/foreach}
+									</SELECT>
+								</TD>
+								<TD class="nobr">
+									<INPUT type="checkbox" name="groupexclude"
+										   id="invoicereport-groupexclude" {if $listdata.groupexclude} CHECKED{/if}><label
+											for="invoicereport-groupexclude">{trans("exclude group")}</label>
+								</TD>
+							</TR>
+							<TR>
+								<TD>
+									<IMG src="img/queue.gif" alt="">
+								</TD>
+								<TD class="bold nobr">
+									{trans("Plan:")}
+								</TD>
+								<TD colspan="2" class="multiselect nobr">
+									<SELECT name="numberplanid[]" class="lms-ui-multiselect"
+											style="min-width: 200px;" {tip text="Select numbering plan"} multiple
+											data-default-value="{trans("- all -")}">
+										{foreach $numberplans as $plan}
+											{$period = $plan.period}
+											<OPTION value="{$plan.id}">{number number=$plan.next template=$plan.template time=$invoice.cdate}
+												({$_NUM_PERIODS.$period})
+											</OPTION>
+										{/foreach}
+									</SELECT>
+								</TD>
+							</TR>
+							<TR>
+								<TD>
+									<IMG src="img/money.gif" alt="">
+								</TD>
+								<TD class="bold nobr">
+									{trans("Service types")}
+								</TD>
+								<TD colspan="2" class="nobr">
+									<select name="servicetypes[]" class="lms-ui-multiselect" multiple
+										data-default-value="{trans("- any -")}" data-shorten-to-default-value="false">
+										{foreach Localisation::arraySort($_SERVICETYPES) as $type => $label}
+											<option value="{$type}">{$label}</option>
+										{/foreach}
+									</select>
+									<label>
+										<input type="radio" name="servicetypeoper" value="or" checked>
+										{trans("or<!operator>")}
+									</label>
+									<label>
+										<input type="radio" name="servicetypeoper" value="and">
+										{trans("and<!operator>")}
+									</label>
+								</TD>
+							</TR>
+							<TR>
+								<TD>
+									<IMG src="img/settings.gif" alt="">
+								</TD>
+								<TD class="bold nobr">
+									{trans("Adjust the print")}:
+								</TD>
+								<TD colspan="2" class="nobr">
+									<label>
+										<input type="checkbox" name="printcustomerid" value="1">
+										{trans("hide customer ID")}
+									</label>
+									<label>
+										<input type="checkbox" name="printonlysummary" value="1">
+										{trans("only summary")}
+									</label>
+								</TD>
+							</TR>
+						</TABLE>
 					</TD>
 					<TD style="width: 1%;">
 					    <TABLE width="100%">
