--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -494,7 +494,7 @@
 								<TD>
 									{icon name="type" class="fa-fw"}
 								</TD>
-								<TD>
+								<TD class="bold">
 									{trans("Type:")}
 								</TD>
 								<TD>
