bugfix: visual fix in total row

--- a/userpanel/modules/finances/style/bclean/templates/userassignments.html
+++ b/userpanel/modules/finances/style/bclean/templates/userassignments.html
@@ -169,7 +169,9 @@
 				{if $show_invoiceflag}
 				<td>&nbsp;</td>
 				{/if}
+				{if $show_period}
 				<td>&nbsp;</td>
+				{/if}
 			</tr>
 		{/if}
 	</table>
