improvement/devel: modernized some userpanel setup templates

--- a/userpanel/modules/finances/templates/setup.html
+++ b/userpanel/modules/finances/templates/setup.html
@@ -1,7 +1,7 @@
 {include file="header.html"}
 <!--// $Id$ //-->
 <h1>{$layout.pagetitle}</h1>
-<TABLE class="lmsbox" cellpadding="3">
+<table class="lmsbox" cellpadding="3">
 	<thead>
 		<tr>
 			<td class="bold">
@@ -11,9 +11,9 @@
 		</tr>
 	</thead>
 	<tbody>
-		<TR>
-			<TD>
-				<FORM name="moduleconfig" method="POST" action="?m=userpanel&module=finances&f=submit_setup">
+		<tr>
+			<td>
+				<form name="moduleconfig" method="POST" action="?m=userpanel&module=finances&f=submit_setup">
 					<table>
 						<colgroup>
 							<col style="width: 1%;">
@@ -148,9 +148,9 @@
 							</td>
 						</tr>
 					</table>
-				</FORM>
-			</TD>
-		</TR>
+				</form>
+			</td>
+		</tr>
 	</tbody>
-</TABLE>
+</table>
 {include file="footer.html"}
