--- a/userpanel/modules/finances/templates/setup.html
+++ b/userpanel/modules/finances/templates/setup.html
@@ -98,13 +98,13 @@
 						</tr>
 						<tr>
 							<td class="nobr">
-								<label for="show_invoiceflag">
+								<label for="show_invoice_flag">
 									{trans("Show invoice column in assignment panel")}
 								</label>
 							</td>
 							<td>
-								<INPUT class="box light" type="checkbox" name="show_invoiceflag" id="show_invoiceflag" value="1"
-									{if $show_invoiceflag == 1} checked{/if}>
+								<INPUT class="box light" type="checkbox" name="show_invoice_flag" id="show_invoice_flag" value="1"
+									{if $show_invoice_flag == 1} checked{/if}>
 							</td>
 						</tr>
 						<tr>
