improvement/devel: modernized balance new form

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -165,7 +165,8 @@
   }
 }
 
-.lms-ui-icon-settle {
+.lms-ui-icon-settle,
+.lms-ui-icon-value {
   .fa-icon;
   .fas;
   .lms-ui-icon;
@@ -1760,5 +1761,15 @@
   .lms-ui-icon;
   &:before {
     content: @fa-var-digital-ocean;
+  }
+}
+
+.lms-ui-icon-tax,
+.lms-ui-icon-taxrate {
+  .fa-icon;
+  .fas;
+  .lms-ui-icon;
+  &:before {
+    content: @fa-var-suitcase;
   }
 }
