enhancement: service type support in in new operation form in customer balance box

--- a/templates/default/customer/customerbalancebox.html
+++ b/templates/default/customer/customerbalancebox.html
@@ -422,9 +422,18 @@
 							<INPUT type="radio" form="addbalance-form" NAME="addbalance[type]" value="1" {tip text="Select type of operation"} checked>
 							{trans("income/expense")}
 						</label>
+						<div class="servicetype">
+							{icon name="money" class="fa-fw"}
+							<select id="servicetype" name="addbalance[servicetype]" form="addbalance-form" {tip text="Service type"}>
+								<option value="">{trans("- none -")}</option>
+								{foreach Localisation::arraySort($_SERVICETYPES) as $type => $label}
+									<option value="{$type}"{if $servicetype == $type} selected{/if}>{$label}</option>
+								{/foreach}
+							</select>
+						</div>
 						{if $sourcelist}
 						<div class="isource">
-							<i class="lms-ui-icon-isource"></i>
+							<i class="lms-ui-icon-isource fa-fw"></i>
 							<SELECT form="addbalance-form" name="addbalance[sourceid]" {tip text="Select import source (optional)" trigger="source"}>
 								<OPTION value="0">{trans("- none -")}</OPTION>
 								{foreach $sourcelist as $source}
@@ -595,6 +604,13 @@
 			location.href = '?m={$layout.module}&id={$objectid}&aggregate_documents=' +
 				($(this).prop('checked') ? '1' : '0');
 		});
+
+		$('[name="addbalance[type]"]').change(function() {
+			var that = this;
+			$('#servicetype').prop('disabled', function() {
+				return $(that).val() == '1';
+			});
+		}).change();
 	});
 
 	{if ConfigHelper::checkConfig('phpui.delete_link_in_customerbalancebox')}
