--- a/userpanel/modules/finances/templates/userassignments.html
+++ b/userpanel/modules/finances/templates/userassignments.html
@@ -1,6 +1,10 @@
 <!--// $Id$ //-->
 {box title="Your subscriptions"}
 {$show_speeds = ConfigHelper::checkConfig('userpanel.show_speeds')}
+{$show_period = ConfigHelper::checkConfig('userpanel.show_period')}
+{$show_discount = ConfigHelper::checkConfig('userpanel.show_discount')}
+{$show_discounted_value = ConfigHelper::checkConfig('userpanel.show_discounted_value')}
+{$show_invoice_flag = ConfigHelper::checkConfig('userpanel.show_invoice_flag')}
 {$show_all_assignments = ConfigHelper::checkConfig('userpanel.show_all_assignments')}
 {$speed_unit_type = ConfigHelper::getConfig('userpanel.speed_unit_type')}
 {$speed_unit_aggregation_threshold = ConfigHelper::getConfig('userpanel.speed_unit_aggregation_threshold')}
@@ -8,14 +12,20 @@
 	<tr class="darkest">
 		<td width="93%" class="nobr"><strong>{trans("Subscription:")}</strong></td>
 		<td width="1%" class="nobr" align="right">{trans("Value:")}</td>
-		<td width="1%" class="nobr" align="right">{trans("Discount:")}</td>
+		{if $show_discount}
+			<td width="1%" class="nobr" align="right">{trans("Discount:")}</td>
+		{/if}
 		<td width="1%" class="nobr">{trans("Accounting day:")}</td>
 		{if $show_speeds}
 			<td width="1%" class="nobr" align="right">{trans("Downrate (ceil):")}</td>
 			<td width="1%" class="nobr" align="right">{trans("Uprate (ceil):")}</td>
 		{/if}
-		<td width="1%" class="nobr">{trans("Invoice:")}</td>
-		<td width="1%" class="nobr">{trans("Period:")}</td>
+		{if $show_invoice_flag}
+			<td width="1%" class="nobr">{trans("Invoice:")}</td>
+		{/if}
+		{if $show_period}
+			<td width="1%" class="nobr">{trans("Period:")}</td>
+		{/if}
 	</tr>
 	{$total_real_value = array()}
 	{$total_real_disc_value = array()}
@@ -28,32 +38,46 @@
 		&& ($show_all_assignments || ($assignment.datefrom <= $smarty.now && (empty($assignment.dateto) || $assignment.dateto >= $smarty.now)))}
 	<tr class="dark">
 		<td><strong>{if ConfigHelper::checkConfig('userpanel.show_tariffname')}{$assignment.name}{/if}</strong></td>
-		<td class="nobr" align="right">
-			{moneyf($assignment.real_value, $assignment.currency)}
-			{if !isset($total_real_value[$assignment.currency])}
-				{$total_real_value[$assignment.currency] = 0}
-			{/if}
-			{if $assignment.datefrom <= $smarty.now && (empty($assignment.dateto) || $assignment.dateto >= $smarty.now)}
-				{$total_real_value[$assignment.currency] = $total_real_value[$assignment.currency] + $assignment.real_value}
-			{/if}
-		</td>
-		<td class="nobr" align="right">
-			{if $assignment.pdiscount > 0}
-				{$assignment.pdiscount}%
-			{else}
-				{if $assignment.vdiscount > 0}
-					{moneyf($assignment.vdiscount, $assignment.currency)}
-				{else}
-					-
+		{if $show_discounted_value}
+			<td class="nobr" align="right">
+				{moneyf($assignment.discounted_value, $assignment.currency)}
+				{if !isset($total_real_value[$assignment.currency])}
+					{$total_real_value[$assignment.currency] = 0}
 				{/if}
-			{/if}
-			{if !isset($total_real_disc_value[$assignment.currency])}
-				{$total_real_disc_value[$assignment.currency] = 0}
-			{/if}
-			{if $assignment.datefrom <= $smarty.now && (empty($assignment.dateto) || $assignment.dateto >= $smarty.now)}
-				{$total_real_disc_value[$assignment.currency] = $total_real_disc_value[$assignment.currency] + $assignment.real_disc_value}
-			{/if}
-		</td>
+				{if $assignment.datefrom <= $smarty.now && (empty($assignment.dateto) || $assignment.dateto >= $smarty.now)}
+					{$total_real_value[$assignment.currency] = $total_real_value[$assignment.currency] + $assignment.discounted_value}
+				{/if}
+			</td>
+		{else}
+			<td class="nobr" align="right">
+				{moneyf($assignment.real_value, $assignment.currency)}
+				{if !isset($total_real_value[$assignment.currency])}
+					{$total_real_value[$assignment.currency] = 0}
+				{/if}
+				{if $assignment.datefrom <= $smarty.now && (empty($assignment.dateto) || $assignment.dateto >= $smarty.now)}
+					{$total_real_value[$assignment.currency] = $total_real_value[$assignment.currency] + $assignment.real_value}
+				{/if}
+			</td>
+		{/if}
+		{if $show_discount}
+			<td class="nobr" align="right">
+				{if $assignment.pdiscount > 0}
+					{$assignment.pdiscount}%
+				{else}
+					{if $assignment.vdiscount > 0}
+						{moneyf($assignment.vdiscount, $assignment.currency)}
+					{else}
+						-
+					{/if}
+				{/if}
+				{if !isset($total_real_disc_value[$assignment.currency])}
+					{$total_real_disc_value[$assignment.currency] = 0}
+				{/if}
+				{if $assignment.datefrom <= $smarty.now && (empty($assignment.dateto) || $assignment.dateto >= $smarty.now)}
+					{$total_real_disc_value[$assignment.currency] = $total_real_disc_value[$assignment.currency] + $assignment.real_disc_value}
+				{/if}
+			</td>
+		{/if}
 		<td class="nobr">{$assignment.payday}</td>
 		{if $show_speeds}
 			<td class="nobr" align="right">
@@ -93,16 +117,20 @@
 				{/if})
 			</td>
 		{/if}
-		<td>{if $assignment.invoice}{trans("yes")}{else}&nbsp;{/if}</td>
-		<td>
-			{if $assignment.datefrom}<span class="nobr">{trans("from")} {$assignment.datefrom|date_format:"%Y/%m/%d"}</span>{/if}
-			{if $assignment.dateto}<span class="nobr">{trans("to")} {$assignment.dateto|date_format:"%Y/%m/%d"}</span>{/if}
-		</td>
+		{if $show_invoice_flag}
+			<td>{if $assignment.invoice}{trans("yes")}{else}&nbsp;{/if}</td>
+		{/if}
+		{if $show_period}
+			<td>
+				{if $assignment.datefrom}<span class="nobr">{trans("from")} {$assignment.datefrom|date_format:"%Y/%m/%d"}</span>{/if}
+				{if $assignment.dateto}<span class="nobr">{trans("to")} {$assignment.dateto|date_format:"%Y/%m/%d"}</span>{/if}
+			</td>
+		{/if}
 	</tr>
 	{/if}
 	{foreachelse}
 	<tr>
-		<td class="text-wrap" width="100%" colspan="{if $show_speeds}8{else}6{/if}">
+		<td class="text-wrap" width="100%" colspan="{if $show_speeds}{if $show_period}8{else}7{/if}{else}{if $show_period}6{else}5{/if}{/if}">
 			<p>&nbsp;</p>
 			<p><strong>{trans("You haven't got any assigned subscriptions.")}</strong></p>
 			<p>&nbsp;</p>
@@ -117,9 +145,11 @@
 				{moneyf($total_value, $currency)}
 			{/foreach}
 		</td>
-		<td class="nobr" align="right">
-			({foreach $total_real_disc_value as $currency => $total_disc_value}{if !$total_disc_value@first}<br>{/if}{moneyf($total_disc_value, $currency)}{foreachelse}-{/foreach})
-		</td>
+		{if $show_discount}
+			<td class="nobr" align="right">
+				({foreach $total_real_disc_value as $currency => $total_disc_value}{if !$total_disc_value@first}<br>{/if}{moneyf($total_disc_value, $currency)}{foreachelse}-{/foreach})
+			</td>
+		{/if}
 		<td>&nbsp;</td>
 		{if $show_speeds}
 			<td class="nobr" align="right">
@@ -147,8 +177,12 @@
 				{/if})
 			</td>
 		{/if}
-		<td>&nbsp;</td>
-		<td class="nobr" align="right">&nbsp;</td>
+		{if $show_invoice_flag}
+			<td>&nbsp;</td>
+		{/if}
+		{if $show_period}
+			<td class="nobr" align="right">&nbsp;</td>
+		{/if}
 	</tr>
 </table>
 {/box}
