--- a/templates/default/rt/rtticketmodify.html
+++ b/templates/default/rt/rtticketmodify.html
@@ -225,7 +225,7 @@
 					{foreach $_RT_PRIORITIES as $priorityidx => $priority}
 					<OPTION value="{$priorityidx}"{if $ticket.priority == $priorityidx} selected{/if}>{$priority}</OPTION>
 					{/foreach}
-					<OPTION value="" {if (is_array($ticket.priority) && in_array(null, $ticket.priority)) || is_null($ticket.priority)} selected{/if}>{trans("unset")}</OPTION>
+					<OPTION value="" {if (is_array($ticket.priority) && in_array(null, $ticket.priority)) || is_null($ticket.priority)} selected{/if}>{trans("undefined")}</OPTION>
 				</SELECT>
 			{/box_row}
 
