bugfix: restore current liabilities values sum displaying

--- a/templates/default/customer/customerassignments.html
+++ b/templates/default/customer/customerassignments.html
@@ -455,7 +455,7 @@
 				}
 				html += sprintf(money_format, value, currency);
 			});
-			$('#total-value').html(html);
+			$('.total-value').html(html);
 			var html = '';
 			$.each(total_disc_value, function (currency, value) {
 				if (html.length) {
