improvement: added 60 and 90 days values in customer assignment filters

--- a/templates/default/customer/customerlist.html
+++ b/templates/default/customer/customerlist.html
@@ -226,6 +226,8 @@
 				<option value="7" {if $filter.assignments eq '7'} selected {/if}>{trans('expire in $a days', 7)}</option>
 				<option value="14" {if $filter.assignments eq '14'} selected {/if}>{trans('expire in $a days', 14)}</option>
 				<option value="30" {if $filter.assignments eq '30'} selected {/if}>{trans('expire in $a days', 30)}</option>
+				<option value="60" {if $filter.assignments eq '60'} selected {/if}>{trans('expire in $a days', 60)}</option>
+				<option value="90" {if $filter.assignments eq '90'} selected {/if}>{trans('expire in $a days', 90)}</option>
 				<option value="-1" {if $filter.assignments eq '-1'} selected {/if}>{trans('without end date')}</option>
 				<option value="-2" {if $filter.assignments eq '-2'} selected {/if}>{trans('active')}</option>
 				<option value="-3" {if $filter.assignments eq '-3'} selected {/if}>{trans('active, with invoice')}</option>
