--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -396,6 +396,8 @@
 				<option value="7">{trans('expire in $a days', 7)}</option>
 				<option value="14">{trans('expire in $a days', 14)}</option>
 				<option value="30">{trans('expire in $a days', 30)}</option>
+				<option value="60">{trans('expire in $a days', 60)}</option>
+				<option value="90">{trans('expire in $a days', 90)}</option>
 				<option value="-1">{trans('without end date')}</option>
 				<option value="-2">{trans('active')}</option>
 				<option value="-3">{trans('active, with invoice')}</option>
