--- a/userpanel/modules/notices/style/bclean/templates/notices.html
+++ b/userpanel/modules/notices/style/bclean/templates/notices.html
@@ -14,10 +14,10 @@
 	<div class="table-responsive">
 		<table class="table table-bordered table-condensed table-striped">
 			<tr class="bg-primary text-white">
-				<th>{trans("Date:")}</th>
-				<th>{trans("Status:")}</th>
-				<th>{trans("Subject:")}</th>
-				<th>{trans("Read status:")}</th>
+				<th>{trans("Date")}</th>
+				<th>{trans("Status")}</th>
+				<th>{trans("Subject")}</th>
+				<th>{trans("Read")}</th>
 			</tr>
 			{foreach $notice as $items}
 				<tr class="{if $items.status==$smarty.const.MSG_ERROR}text-danger{elseif $items.status==$smarty.const.MSG_SENT}text-muted{/if}" onCLick="ReadNotice('{$items.id}');">
@@ -29,7 +29,6 @@
 							{if $items.status == $smarty.const.MSG_SENT && !$items.lastreaddate}
 								{trans("Unread")}
 							{elseif $items.status == $smarty.const.MSG_SENT || $items.status == $smarty.const.MSG_DELIVERED}
-								{trans("Was read on:")}<br />
 								{$items.lastreaddate|date_format:"%Y/%m/%d %H:%M"}
 							{/if}
 						{/if}
