--- a/templates/default/document/documentreference.html
+++ b/templates/default/document/documentreference.html
@@ -6,13 +6,15 @@
     {trans("Reference document:")}
 </TD>
 <TD class="nobr">
-    <SELECT name="document[reference]" {tip class="lms-ui-advanced-select" text="Select reference document" trigger="reference"}>
-        <OPTION value=""{if !$document.reference} selected{/if}>{trans("- none -")}</OPTION>
+    <select name="document[reference]" {tip class="lms-ui-advanced-select" text="Select reference document" trigger="reference"}>
+        <option value=""{if !$document.reference} selected{/if}>{trans("- none -")}</option>
         {foreach $references as $doc}
-        {number number=$doc.number template=$doc.template time=$doc.cdate customerid=$cid assign="number"}
-        <OPTION value="{$doc.docid}"{if isset($document.reference.id) && $document.reference.id == $doc.docid} selected{/if}>{t a=$_DOCTYPES[$doc.type] b=$number c=$doc.cdate|date_format:"%Y/%m/%d"}$a no. $b issued on $c{/t}</OPTION>
+            {number number=$doc.number template=$doc.template time=$doc.cdate customerid=$cid assign="number"}
+            <option value="{$doc.docid}"
+                {if isset($document.reference.id) && $document.reference.id == $doc.docid} selected{/if}
+                >{t a=$_DOCTYPES[$doc.type] b=$number c=$doc.cdate|date_format:"%Y/%m/%d"}$a no. $b issued on $c{/t}</option>
         {/foreach}
-    </SELECT>
+    </select>
 </TD>
 <script>
     $(function() {
